2012-02-14 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-action.c (ifactory_object_read_done):
	* src/core/na-object-menu.c (ifactory_object_read_done):
	* src/core/na-object-profile.c (ifactory_object_read_done):
	No more dump still incomplete object.

	* src/core/na-boxed.c (string_list_from_void): Keep the source and the
	target string lists in the same order.

	* src/core/na-io-provider.c (na_io_provider_load_items): Fix comment.

	* src/nact/nact-main-window.h:
	* src/nact/nact-main-window.c
	(on_base_initialize_window, on_tree_view_selection_changed):
	* src/nact/nact-assistant-export.c (on_base_all_widgets_showed):
	* src/nact/nact-menubar.c (on_base_initialize_window):
	* src/nact/nact-tree-view.c (class_init, on_selection_changed):
	* src/nact/nact-tree-view.h:
	Get rid of TREE_SIGNAL_SELECTION_CHANGED signal, only using
	MAIN_SIGNAL_SELECTION_CHANGED one, based on the assertion that the
	NactMainWindow will be the first triggered handler.

	* src/nact/nact-tree-view.c (get_selected_items): Improve debug message.

	* src/nact/nact-menubar.c (instance_dispose,
	on_tree_view_selection_changed): Keeping a recursive ref on the current
	selection is definitively a bad idea;; only keep a copy of the list.

	The bad idea is actually:
	- keep a recursive ref on the current selection,
	- does someting in the UI, e.g. insert a new item in the selection,
	- then select the newly inserted item,
	  > thus recursively unreffing the kept previous selection
	  > so unreffing the inserted item which unfortunately was not previously
	    counted -> so ref_count miss.

	* src/nact/nact-menubar-maintainer.c
	(nact_menubar_maintainer_on_dump_selection): Incrementing the objects
	ref_count on dump is useless.

	* src/nact/nact-menubar-edit.c (nact_menubar_edit_on_copy): Incrementing
	the objects ref before copying is useless.

	* src/nact/nact-main-window.c
	(on_base_initialize_gtk, on_base_initialize_window): Move connections to